force-app/main/default/objects/Travel_Request__c/Travel_Request__c.object-meta.xml
<CustomObject>
    <description>Travel Request custom object for TravelEasy platform</description>
    <label>Travel Request</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Travel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>