force-app/main/default/objects/Travel_Request__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <label>Actual Cost</label>
    <summarizedField>Expense_Report__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Report__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Report__c.Travel_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>