force-app/main/default/objects/Travel_Request__c/fields/Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Budget_Status__c</fullName>
    <formula>IF(BLANKVALUE(Actual_Cost__c, 0) &gt; BLANKVALUE(Estimated_Cost__c, 0), &quot;Over Budget&quot;, IF(BLANKVALUE(Actual_Cost__c, 0) == BLANKVALUE(Estimated_Cost__c, 0), &quot;On Budget&quot;, &quot;Under Budget&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Status</label>
    <type>Text</type>
</CustomField>