force-app/main/default/objects/Travel_Request__c/fields/Budget_Variance__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance__c</fullName>
    <formula>BLANKVALUE(Actual_Cost__c, 0) - BLANKVALUE(Estimated_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>