force-app/main/default/objects/Travel_Request__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <formula>IF(OR(ISBLANK(Start_Date__c), ISBLANK(End_Date__c)), 0, (End_Date__c - Start_Date__c) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>