force-app/main/default/objects/Travel_Request__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>