force-app/main/default/objects/Travel_Request__c/validationRules/Estimated_Cost_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Cost_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Estimated_Cost__c)) &amp;&amp; Estimated_Cost__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Estimated_Cost__c</errorDisplayField>
    <errorMessage>Estimated Cost must be greater than zero.</errorMessage>
</ValidationRule>